--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -5,6 +5,7 @@
 <div class="card">
   <p><strong>Email:</strong> {{ user.email }}</p>
   <p><strong>Active:</strong> {{ 'Yes' if user.is_active else 'No' }}</p>
+  <p><strong>MFA:</strong> {{ 'Enabled' if user.mfa_enabled else 'Disabled' }}</p>
   <p><strong>Created:</strong> {{ user.created_at }}</p>
 </div>
 <p>
